[project]
name = "chatbot-gradio"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gradio>=5.3.0",
    "langchain>=0.3.19",
    "langchain-openai>=0.3",
    "pydantic-settings>=2.8.0",
    "langchain-gigachat>=0.3",
    "langgraph>=0.2.74",
    "langchain-community>=0.3.18",
]
